@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.762.2.17 2008-10-29 15:31:57 tr Exp $
+# $Id: CHANGES,v 1.762.2.18 2008-10-29 16:20:41 tt Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.3.4 (2008/??/??)
+ - (2008/10/29) Fixed bug# 3244 - "Defination"-Typo in Defaults.pm.
  - (2008/10/29) Fixed bug# 2736 - AdminUser&Subaction=Change - Valid is
     automatically changed
  - (2008/10/29) Fixed bug# 2710 - Error: Module 'Kernel::Modules::' not found!
